# VK-Scene-Renderer

./: CMakeLists.txt  README.md  application.cpp  application.h  base.h  camera.cpp  camera.h  common.h  instancingManager.cpp  instancingManager.h  main.cpp  model.cpp  model.h  pushConstantsManager.cpp  pushConstantsManager.h  uniformManager.cpp  uniformManager.h
core/: CMakeLists.txt  application.cpp  application.h  type.h  window.cpp  window.h
imgui/: CMakeLists.txt
loader/: CMakeLists.txt  mesh.cpp  mesh.h  scene.cpp  scene.h
renderer/: CMakeLists.txt  gpu_structs.h
renderer/camera/: camera.cpp  camera.h
renderer/light/: directional_light.cpp  directional_light.h
renderer/scene/: instancingManager.cpp  instancingManager.h  instancing_manager.cpp  instancing_manager.h  sceneMeshRenderer.cpp  sceneMeshRenderer.h  scene_mesh_renderer.cpp  (+1 more)
scene/: CMakeLists.txt  mesh.cpp  mesh.h  scene.cpp  scene.h  sceneMeshRenderer.cpp  sceneMeshRenderer.h
shaders/: compile.bat  model.frag  model.vert  vs.spv
texture/: cubeMapTexture.cpp  cubeMapTexture.h  texture.cpp  texture.h
tools/: CMakeLists.txt  bitmap.h  scene_tools.cpp  scene_tools.h  tools.cpp  tools.h
uniform/: CMakeLists.txt  drawDataUniformManager.cpp  drawDataUniformManager.h  frameUniformManager.cpp  frameUniformManager.h  materialUniformManager.cpp  materialUniformManager.h  sceneTextureManager.cpp  sceneTextureManager.h  skyboxUniformManager.cpp  skyboxUniformManager.h  transformUniformManager.cpp  transformUniformManager.h
vulkanWrapper/: buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  computePassInstancing.cpp  computePassInstancing.h  computePipeline.cpp  computePipeline.h  description.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  device.cpp  device.h  fence.cpp  fence.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  renderPass.cpp  renderPass.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  swapChain.cpp  swapChain.h  window.cpp  window.h  windowSurface.cpp  (+1 more)
wrapper/: CMakeLists.txt  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  computePassInstancing.cpp  computePassInstancing.h  computePipeline.cpp  computePipeline.h  compute_pass_instancing.cpp  compute_pass_instancing.h  compute_pipeline.cpp  compute_pipeline.h  description.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  (+23 more)
(+101 files in other folders)
